...
          </View>
        ))}
      </ScrollView>

      <ModalOscuroAcciones className="pt-3">
        <Boton
          testID="boton-quitar-masivo"
          texto={`Quitar ${jugadores.length} jugadores del equipo`}
          icono="trash-2"
          color="rojo"
          onPress={handleDesvincular}
          cargando={cargando}
          deshabilitado={cargando}
...
