...

  if (isLoading) {
    return <Text style={styles.mensaje}>Cargando jugadores...</Text>;
  }

  if (isError || !jugadores) {
    return <Text style={styles.mensaje}>Error al cargar los jugadores.</Text>;
  }

  return (
    <ScrollView style={styles.container}>
      <View style={styles.carnetesContainer}>
        {jugadores.map((jugador) => (
...
