...
        <BotonCerrarSesion onPress={handleCerrarSesion} />
      </View>
    )
  }

  return (
    <View testID="pantalla-seleccion-equipo" className="flex-1 bg-surface p-5">
      <Texto variante="titulo" className="mb-10 mt-12 text-center text-zinc-100">
        Seleccioná tu equipo
      </Texto>
      <ScrollView className="flex-1" showsVerticalScrollIndicator={false}>
        {data?.clubsConEquipos?.map((club) => (
          <View key={club.nombre} className="mb-4">
...
