...
        </Text>
        <Text className="text-sm text-center text-zinc-400 mt-1">DNI: {jugador.dni}</Text>
      </ModalOscuroEncabezado>

      <ModalOscuroAcciones>
        <Boton
          testID="boton-eliminar-jugador"
          texto="Eliminar jugador"
          icono="trash-2"
          color="rojo"
          onPress={onEliminar}
        />

        <Boton
          testID="boton-transferir-jugador"
          texto="Transferir"
          icono="external-link"
          onPress={onTransferir}
        />

        <Boton
...
